add submodule for glfw

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/libnoise"]
 	path = lib/libnoise
 	url = https://github.com/qknight/libnoise.git
+[submodule "lib/glfw"]
+	path = lib/glfw
+	url = https://github.com/glfw/glfw.git
