remove libnoise because fuck it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,28 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_subdirectory(./lib/glfw)
 
-IF(WIN32)
-  SET(LIBNOISE_LIBRARY ./lib/libnoise.lib)
- ELSE()
-  SET(LIBNOISE_LIBRARY noise)
-ENDIF()
+# list of files for which we add a copy rule
+set(data_SHADOW 
+	./shaders/vertex.glsl
+	./shaders/fragment.glsl
+	./resources/dirt.png
+	./lib/libnoise.dll
+)
+
+# we don't want to copy if we're building in the source dir
+if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
+    foreach(item IN LISTS data_SHADOW)
+        message(STATUS ${item})
+        add_custom_command(
+            OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${item}"
+            COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/${item}" "${CMAKE_CURRENT_BINARY_DIR}/${item}"
+            DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${item}"
+        )
+    endforeach()
+endif()
+
+# files are only copied if a target depends on them
+add_custom_target(data-target ALL DEPENDS "${data_SHADOW}")
 
 ## glm
 find_package(GLM REQUIRED)
@@ -43,6 +60,8 @@ set(MY_HEADER_FILES
 	"./src/imgui/imgui.h"
 	"./src/imgui/imgui_internal.h"
 	"./src/imgui/imgui_impl_glfw_gl3.h"
+
+	"./lib/FastNoise/FastNoise.h"
 )
 
 set(MY_SOURCE_FILES
@@ -57,13 +76,14 @@ set(MY_SOURCE_FILES
 	"src/TextureManager.cpp"
 	"src/ChunkManager.cpp"
 	"src/glad.c"
-	"src/noiseutils.cpp"
 
 	# imgui
 	"./src/imgui/imgui.cpp"
 	"./src/imgui/imgui_demo.cpp"
 	"./src/imgui/imgui_draw.cpp"
 	"./src/imgui/imgui_impl_glfw_gl3.cpp"
+
+	"./lib/FastNoise/FastNoise.cpp"
 )
 
 ## Used for ycm
@@ -73,6 +93,7 @@ include_directories(
 	${OPENGL_INCLUDE_DIR}
 	"./src"
 	"./inc"
+	"./lib"
 )
 
 add_executable(minecrouft
@@ -81,6 +102,5 @@ add_executable(minecrouft
 )
 target_link_libraries(minecrouft
 	${OPENGL_gl_LIBRARY} # filled by "find_package(OpenGL REQUIRED)"
-	${LIBNOISE_LIBRARY}
 	glfw
 )
