--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/glfw"]
 	path = lib/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "lib/FastNoise"]
+	path = lib/FastNoise
+	url = https://github.com/Auburns/FastNoise.git
