switch to texture atlas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,10 @@ set(MY_HEADER_FILES
 	"src/Shader.hpp"
 	"src/Mesh.hpp"
 	"src/Keyboard.hpp"
-	"src/Texture.hpp"
 	"src/Mouse.hpp"
 	"src/Chunk.hpp"
 	"src/Debug.hpp"
-	"src/TextureManager.hpp"
+	"src/TextureAtlas.hpp"
 	"src/ChunkManager.hpp"
 	"src/Frustrum.hpp"
     "src/HeightMap.hpp"
@@ -53,9 +52,8 @@ set(MY_SOURCE_FILES
 	"src/Mesh.cpp"
 	"src/Keyboard.cpp"
 	"src/Mouse.cpp"
-	"src/Texture.cpp"
 	"src/Chunk.cpp"
-	"src/TextureManager.cpp"
+	"src/TextureAtlas.cpp"
 	"src/ChunkManager.cpp"
 	"src/glad.c"
 	"src/Frustrum.cpp"
