--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "lib/glm"]
 	path = lib/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "lib/lua"]
+	path = lib/lua
+	url = https://github.com/LuaDist/lua
+	branch = lua-5.3
