cube creation and deletion, it's starting to look like a game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set(MY_SOURCE_FILES
 	"src/Player.cpp"
 	"src/IO.cpp"
 	"src/Hud.cpp"
+	"src/Guizmo.cpp"
 	
 	"src/ngLib/console.cpp"
 	"src/ngLib/logs.cpp"
